Fix z-index

--- a/public/stylesheets/sass/style.scss
+++ b/public/stylesheets/sass/style.scss
@@ -1132,7 +1132,7 @@ table.records {
         border: 3px solid #ffd600;
         background: #fff url('/images/sheet_bg.gif') right bottom no-repeat;
         margin: 0 auto; margin-bottom: 1em;
-        z-index: 80;
+        z-index: 1;
 
         div.small_text_block {
           background: url('/images/small_text_block.gif') no-repeat;
@@ -1151,7 +1151,7 @@ table.records {
       }
 
       .loading {
-        z-index: 90;
+        z-index: 12;
         position: absolute; top: 50px; left: 67px;
       }
 
